Fix hero image position - prevent overflow

--- a/css/style.css
+++ b/css/style.css
@@ -403,10 +403,10 @@ h4 { font-size: 1.25rem; }
 
 .hero-image {
   position: absolute;
-  right: -5%;
+  right: 2%;
   bottom: 0;
-  width: 50%;
-  max-width: 700px;
+  width: 48%;
+  max-width: 650px;
   opacity: 0.9;
 }
 
